Учтены замечания по домашней работе module-01-02/module-03

--- a/Module-01-02/Index.html
+++ b/Module-01-02/Index.html
@@ -7,76 +7,80 @@
     <title>Module-01-02</title>
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="#">Lifestyle</a></li>
-        <li><a href="#">Photodiary</a></li>
-        <li><a href="#">Music</a></li>
-        <li><a href="#">Travel</a></li>
-      </ul>
-    </nav>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">Lifestyle</a></li>
+          <li><a href="#">Photodiary</a></li>
+          <li><a href="#">Music</a></li>
+          <li><a href="#">Travel</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
-      <ul class="features-list">
-        <li class="features">
-          <img src="img/tm1.png" alt="Lifestyle" />
-          <h3>Lifestyle</h3>
-          <h2>More than just a festival</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex eaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea
-          </p>
-        </li>
-        <li class="features">
-          <img src="img/tm2.png" alt="Lifestyle" />
-          <h3>Lifestyle</h3>
-          <h2>Life tastes better with coffee</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex eaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea
-          </p>
-        </li>
-        <li class="features">
-          <img src="img/tm3.png" alt="Lifestyle" />
-          <h3>Photodiary</h3>
-          <h2>American dream</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex eaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea
-          </p>
-        </li>
-        <li class="features">
-          <img src="img/tm4.png" alt="Lifestyle" />
-          <h3>Photodiary</h3>
-          <h2>A day exploring the Alps</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex eaLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea
-          </p>
-        </li>
-      </ul>
+      <section class="wrapper">
+        <ul class="features-list">
+          <li class="features">
+            <img src="img/tm1.png" alt="Lifestyle" />
+            <h3>Lifestyle</h3>
+            <h2>More than just a festival</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex eaLorem ipsum dolor sit amet, consectetur
+              adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris nisi ut aliquip ex ea
+            </p>
+          </li>
+          <li class="features">
+            <img src="img/tm2.png" alt="Lifestyle" />
+            <h3>Lifestyle</h3>
+            <h2>Life tastes better with coffee</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex eaLorem ipsum dolor sit amet, consectetur
+              adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris nisi ut aliquip ex ea
+            </p>
+          </li>
+          <li class="features">
+            <img src="img/tm3.png" alt="Lifestyle" />
+            <h3>Photodiary</h3>
+            <h2>American dream</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex eaLorem ipsum dolor sit amet, consectetur
+              adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris nisi ut aliquip ex ea
+            </p>
+          </li>
+          <li class="features">
+            <img src="img/tm4.png" alt="Lifestyle" />
+            <h3>Photodiary</h3>
+            <h2>A day exploring the Alps</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex eaLorem ipsum dolor sit amet, consectetur
+              adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris nisi ut aliquip ex ea
+            </p>
+          </li>
+        </ul>
+        <button>
+          <a href="#">Load More</a>
+        </button>
+      </section>
     </main>
-    <button>
-      <a href="#">Load More</a>
-    </button>
   </body>
 </html>
