--- a/Module-03/index.html
+++ b/Module-03/index.html
@@ -9,88 +9,90 @@
     <title>Module-03</title>
   </head>
   <body>
-    <nav class="navigation">
-      <ul class="navigation-menu">
-        <li><a href="#">lifestyle</a></li>
-        <li><a href="#">photodiary</a></li>
-        <li><a href="#">music</a></li>
-        <li><a href="#">travel</a></li>
-      </ul>
-    </nav>
-    <section class="wrapper">
-      <ul class="main-content">
-        <li class="main-content-item">
-          <img src="img/tm1.png" alt="photo1" width="420" height="280" />
-          <p class="img-name">lifestyle</p>
-          <p class="img-header">More than just a music festival</p>
-          <p class="img-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea
-          </p>
-        </li>
-        <li class="main-content-item">
-          <img src="img/tm2.png" alt="photo2" width="420" height="280" />
-          <p class="img-name">lifestyle</p>
-          <p class="img-header">Life tastes better with coffee</p>
-          <p class="img-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea
-          </p>
-        </li>
-        <li class="main-content-item">
-          <img src="img/tm3.png" alt="photo3" width="420" height="280" />
-          <p class="img-name">photodiary</p>
-          <p class="img-header">American dream</p>
-          <p class="img-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea
-          </p>
-        </li>
-        <li class="main-content-item">
-          <img src="img/tm4.png" alt="photo4" width="420" height="280" />
-          <p class="img-name">photodiary</p>
-          <p class="img-header">A day exploring the Alps</p>
-          <p class="img-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea
-          </p>
-        </li>
-        <li class="main-content-item">
-          <img src="img/tm5.png" alt="photo5" width="420" height="280" />
-          <p class="img-name">lifestyle</p>
-          <p class="img-header">Top 10 song for running</p>
-          <p class="img-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea
-          </p>
-        </li>
-        <li class="main-content-item">
-          <img src="img/tm6.png" alt="photo6" width="420" height="280" />
-          <p class="img-name">lifestyle</p>
-          <p class="img-header">Cold winter days</p>
-          <p class="img-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea
-          </p>
-        </li>
-      </ul>
-    </section>
-    <section class="btn">
-      <button>
-        <a href="#">Load More</a>
-      </button>
-    </section>
+    <header>
+      <nav class="wrapper navigation">
+        <ul class="navigation-menu">
+          <li><a href="#">lifestyle</a></li>
+          <li><a href="#">photodiary</a></li>
+          <li><a href="#">music</a></li>
+          <li><a href="#">travel</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="wrapper">
+        <ul class="main-content">
+          <li class="main-content-item">
+            <img src="img/tm1.png" alt="photo1" width="420" height="280" />
+            <p class="img-name">lifestyle</p>
+            <p class="img-header">More than just a music festival</p>
+            <p class="img-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea
+            </p>
+          </li>
+          <li class="main-content-item">
+            <img src="img/tm2.png" alt="photo2" width="420" height="280" />
+            <p class="img-name">lifestyle</p>
+            <p class="img-header">Life tastes better with coffee</p>
+            <p class="img-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea
+            </p>
+          </li>
+          <li class="main-content-item">
+            <img src="img/tm3.png" alt="photo3" width="420" height="280" />
+            <p class="img-name">photodiary</p>
+            <p class="img-header">American dream</p>
+            <p class="img-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea
+            </p>
+          </li>
+          <li class="main-content-item">
+            <img src="img/tm4.png" alt="photo4" width="420" height="280" />
+            <p class="img-name">photodiary</p>
+            <p class="img-header">A day exploring the Alps</p>
+            <p class="img-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea
+            </p>
+          </li>
+          <li class="main-content-item">
+            <img src="img/tm5.png" alt="photo5" width="420" height="280" />
+            <p class="img-name">lifestyle</p>
+            <p class="img-header">Top 10 song for running</p>
+            <p class="img-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea
+            </p>
+          </li>
+          <li class="main-content-item">
+            <img src="img/tm6.png" alt="photo6" width="420" height="280" />
+            <p class="img-name">lifestyle</p>
+            <p class="img-header">Cold winter days</p>
+            <p class="img-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea
+            </p>
+          </li>
+        </ul>
+        <button>
+          <a href="#">Load More</a>
+        </button>
+      </section>
+    </main>
   </body>
 </html>
