Last changes in Module-03

--- a/Module-03/index.html
+++ b/Module-03/index.html
@@ -90,7 +90,7 @@
           </li>
         </ul>
         <button>
-          <a href="#">Load More</a>
+          <p>Load More</p>
         </button>
       </section>
     </main>
