one more changes

--- a/Module-03/index.html
+++ b/Module-03/index.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <main>
-      <section class="wrapper">
+      <section class="wrapper section-main">
         <ul class="main-content">
           <li class="main-content-item">
             <img src="img/tm1.png" alt="photo1" width="420" height="280" />
@@ -90,7 +90,7 @@
           </li>
         </ul>
         <button>
-          <p>Load More</p>
+          Load More
         </button>
       </section>
     </main>
