--- a/Module-04/Index.html
+++ b/Module-04/Index.html
@@ -20,22 +20,20 @@
             ><img src="img/LOGO.png" alt="product1" width="78" height="21"
           /></a>
         </div>
-        <div class="nav-list">
-          <a href="#">home</a>
-          <a href="#">about us</a>
-          <a href="#">page</a>
-          <a href="#">shop</a>
-          <a href="#">blog</a>
-          <a href="#">contuct us</a>
-        </div>
+        <ul class="nav-list">
+          <li><a href="#">home</a></li>
+          <li><a href="#">about us</a></li>
+          <li><a href="#">page</a></li>
+          <li><a href="#">shop</a></li>
+          <li><a href="#">blog</a></li>
+          <li><a href="#">contuct us</a></li>
+        </ul>
       </nav>
     </header>
     <main class="wrapper">
-      <div class="section-title">
-        <h2>featured products</h2>
-      </div>
-      <div class="section-galery">
-        <ul>
+      <section class="feature-products">
+        <h2 class="titles">featured products</h2>
+        <ul class="clearfix">
           <li class="section-galery-item">
             <img src="img/product1.png" alt="item1" width="255" height="322" />
             <p class="product-name">
@@ -93,69 +91,65 @@
             <p class="product-price">$56</p>
           </li>
         </ul>
-      </div>
+      </section>
       <section class="latest-news">
-        <div>
-          <div class="section-title">
-            <h2>latest news</h2>
-          </div>
-          <ul class="blog-features-list">
-            <li class="blog-features-item">
-              <img src="img/Blog2.png" alt="blog2" width="350" height="260" />
-              <p class="blog-title">
-                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-              </p>
-              <img
-                src="img/small-line.png"
-                alt="small-line"
-                width="133"
-                height="3"
-              />
-              <p class="blog-text">
-                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-                Nam nec tellus a odio tincidunt
-              </p>
-              <button>Read More</button>
-            </li>
-            <li class="blog-features-item">
-              <img src="img/Blog1.png" alt="blog1" width="350" height="260" />
-              <p class="blog-title">
-                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-              </p>
-              <img
-                src="img/small-line.png"
-                alt="small-line"
-                width="133"
-                height="3"
-              />
-              <p class="blog-text">
-                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-                Nam nec tellus a odio tincidunt auctor a ornare
-              </p>
-              <button>Read More</button>
-            </li>
-            <li class="blog-features-item">
-              <img src="img/Blog3.png" alt="blog3" width="350" height="260" />
-              <p class="blog-title">
-                Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-              </p>
-              <img
-                src="img/small-line.png"
-                alt="small-line"
-                width="133"
-                height="3"
-              />
-              <p class="blog-text">
-                Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-                Nam nec tellus a odio tincidunt auctor a ornare
-              </p>
-              <button>Read More</button>
-            </li>
-          </ul>
-        </div>
+        <h2 class="titles">latest news</h2>
+        <ul class="blog-features-list clearfix">
+          <li class="blog-features-item">
+            <img src="img/Blog2.png" alt="blog2" width="350" height="260" />
+            <p class="blog-title">
+              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+            </p>
+            <img
+              src="img/small-line.png"
+              alt="small-line"
+              width="133"
+              height="3"
+            />
+            <p class="blog-text">
+              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+              Nam nec tellus a odio tincidunt
+            </p>
+            <button><a href="#">Read More</a></button>
+          </li>
+          <li class="blog-features-item">
+            <img src="img/Blog1.png" alt="blog1" width="350" height="260" />
+            <p class="blog-title">
+              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+            </p>
+            <img
+              src="img/small-line.png"
+              alt="small-line"
+              width="133"
+              height="3"
+            />
+            <p class="blog-text">
+              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+              Nam nec tellus a odio tincidunt auctor a ornare
+            </p>
+            <button><a href="#">Read More</a></button>
+          </li>
+          <li class="blog-features-item">
+            <img src="img/Blog3.png" alt="blog3" width="350" height="260" />
+            <p class="blog-title">
+              Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+            </p>
+            <img
+              src="img/small-line.png"
+              alt="small-line"
+              width="133"
+              height="3"
+            />
+            <p class="blog-text">
+              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+              vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+              Nam nec tellus a odio tincidunt auctor a ornare
+            </p>
+            <button><a href="#">Read More</a></button>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
