--- a/Module-04/Index.html
+++ b/Module-04/Index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="header">
-      <nav class="navigation">
+      <nav class="navigation clearfix">
         <div class="img-logo">
           <a href="#"
             ><img src="img/LOGO.png" alt="product1" width="78" height="21"
@@ -100,54 +100,36 @@
             <p class="blog-title">
               Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
             </p>
-            <img
-              src="img/small-line.png"
-              alt="small-line"
-              width="133"
-              height="3"
-            />
             <p class="blog-text">
               Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
               vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
               Nam nec tellus a odio tincidunt
             </p>
-            <button><a href="#">Read More</a></button>
+            <a href="#">Read More</a>
           </li>
           <li class="blog-features-item">
             <img src="img/Blog1.png" alt="blog1" width="350" height="260" />
             <p class="blog-title">
               Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
             </p>
-            <img
-              src="img/small-line.png"
-              alt="small-line"
-              width="133"
-              height="3"
-            />
             <p class="blog-text">
               Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
               vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
               Nam nec tellus a odio tincidunt auctor a ornare
             </p>
-            <button><a href="#">Read More</a></button>
+            <a href="#">Read More</a>
           </li>
           <li class="blog-features-item">
             <img src="img/Blog3.png" alt="blog3" width="350" height="260" />
             <p class="blog-title">
               Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
             </p>
-            <img
-              src="img/small-line.png"
-              alt="small-line"
-              width="133"
-              height="3"
-            />
             <p class="blog-text">
               Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
               vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
               Nam nec tellus a odio tincidunt auctor a ornare
             </p>
-            <button><a href="#">Read More</a></button>
+            <a href="#">Read More</a>
           </li>
         </ul>
       </section>
