--- a/Module-04/index.html
+++ b/Module-04/index.html
@@ -125,7 +125,7 @@
               Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
             </p>
             <p class="blog-text">
-              Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+              Nam nec telltus a odio tincidunt auc. Duis sed odio sit amet nibh
               vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
               Nam nec tellus a odio tincidunt auctor a ornare
             </p>
