--- a/Module-05/Index.html
+++ b/Module-05/Index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="header">
-      <nav class="navigation container">
+      <nav class="navigation container clearfix">
         <div class="img-logo">
           <a href="#"
             ><img src="img/LOGO.png" alt="product1" width="78" height="21"
@@ -39,14 +39,7 @@
           </div>
           <button class="slider-ctrl slider-prev"></button>
           <button class="slider-ctrl slider-next"></button>
-          <img class="arrow" src="img/arrow.png" alt="slider-arrow" />
-          <img
-            class="arrow-next"
-            src="img/arrow-net.png"
-            alt="slider-arrow-next"
-          />
-        </div>
-      </section>
+         </section>
       <section class="main-collection">
         <div class="container">
           <h2 class="titles">new collection</h2>
@@ -91,7 +84,10 @@
                   <li><button class="btn1"></button></li>
                   <li><button class="btn2"></button></li>
                   <li><button class="btn3"></button></li>
-                  <li><button class="btn4"></button></li>
+                  <li><button class="btn4">
+                    
+                    <p>add to card</p>
+                    </button></li>
                 </ul>
               </div>
               <p class="product-name">
@@ -124,13 +120,13 @@
           </ul>
         </div>
       </section>
-      <footer class="footer">
-        <ul class="footer-text container">
-          <li>All Rights Reserved &copy;</li>
-          <li class="firm-name">Docan &Iota;</li>
-          <li class="designer-name">ThemenGraph</li>
-        </ul>
-      </footer>
     </main>
-  </body>
+      <footer class="footer">
+        <div class="footer-text container">
+          <p>All Rights Reserved &copy;</p>
+          <p class="firm-name">Docan &Iota;</p>
+          <p><span>ThemenGraph</span></p>
+        </div>
+      </footer>
+      </body>
 </html>
