--- a/Module-05/Index.html
+++ b/Module-05/Index.html
@@ -52,7 +52,7 @@
                   <li><button class="btn1"></button></li>
                   <li><button class="btn2"></button></li>
                   <li><button class="btn3"></button></li>
-                  <li><button class="btn4"></button></li>
+                  <li><button class="btn4">add to card</button></li>
                 </ul>
               </div>
               <p class="product-name">
@@ -68,7 +68,7 @@
                   <li><button class="btn1"></button></li>
                   <li><button class="btn2"></button></li>
                   <li><button class="btn3"></button></li>
-                  <li><button class="btn4"></button></li>
+                  <li><button class="btn4">add to card</button></li>
                 </ul>
               </div>
               <p class="product-name">
@@ -84,10 +84,7 @@
                   <li><button class="btn1"></button></li>
                   <li><button class="btn2"></button></li>
                   <li><button class="btn3"></button></li>
-                  <li><button class="btn4">
-                    
-                    <p>add to card</p>
-                    </button></li>
+                  <li><button class="btn4">add to card</button></li>
                 </ul>
               </div>
               <p class="product-name">
@@ -108,7 +105,7 @@
                     <li><button class="btn1"></button></li>
                     <li><button class="btn2"></button></li>
                     <li><button class="btn3"></button></li>
-                    <li><button class="btn4"></button></li>
+                    <li><button class="btn4">add to card</button></li>
                   </ul>
                 </div>
               </div>
