--- a/Module-06/index.html.html
+++ b/Module-06/index.html.html
@@ -157,7 +157,7 @@
                         <img src="images/photo3.png" alt="team3" width="380" height="470" />
                         <p class="name">michael fertig</p>
                         <p class="ucupation">Developer</p>
-                        <article class="hover-team">
+                        <div class="hover-team">
                             <ul class="socials">
                                 <li>
                                     <a href="#" class="facebook"></a>
@@ -172,7 +172,7 @@
                                     <a href="#" class="instagram"></a>
                                 </li>
                             </ul>
-                        </article>
+                        </div>
                     </li>
                 </ul>
                 </article>
