--- a/Module-07/index.html.html
+++ b/Module-07/index.html.html
@@ -31,22 +31,19 @@
                 <p class="title-service">services</p>
                 <p class="title-description">Proin iaculis purus consequat sem cure.</p>
                 <ul class="services-items">
-                    <li class="services-item">
-                        <div class="ecommerce-img "></div>
+                    <li class="services-item bi1">
                         <p class="block-title ">E-Commerce</p>
                         <p class="block-description ">
                             Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
                         </p>
                     </li>
-                    <li class="services-item">
-                        <div class="responsive-img"></div>
+                    <li class="services-item bi2">
                         <p class="block-title ">Responsive Web</p>
                         <p class="block-description ">
                             Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
                         </p>
                     </li>
-                    <li class="services-item">
-                        <div class="security-img"></div>
+                    <li class="services-item bi3">
                         <p class="block-title ">Web Security</p>
                         <p class="block-description ">
                             Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
@@ -54,29 +51,24 @@
                     </li>
                 </ul>
     </div>
-    <!--background-1-->
     </section>
-    <section class="contuct-us background-2">
+    <footer class="contuct-us background-2">
         <div class="wrapper2">
             <p class="title-contuct">contuct us</p>
             <p class="title-description2">Proin iaculis purus consequat sem cure.</p>
-            <div class="placeholders">
-                <Div class="slim">
-                    <form action="#" class="sing-up">
+            <form action="#" class="sing-up">
+                <div class="placeholders">
+                    <Div class="slim">
                         <input class="name place slim" type="name" placeholder="your name*" name="name" required>
                         <input class="mail place slim" type="email" placeholder="you e-mail*" name="email" required>
-                        <input class="subject place slim" type="subject" placeholder="subject" name="subject">
-                    </form>
-                </Div>
-                <form action="#" class="sing-up">
-                    <input class="message place" type="message" placeholder="your message*" name="message" required>
-                </form>
-            </div>
-            <button class="button">
-                send message
-            </button>
+                        <input class="subject place slim" type="text" placeholder="subject" name="subject">
+                    </Div>
+                    <textarea placeholder="your message*" class="message" name="textarea" id="" cols="30" rows="10" required></textarea>
+                </div>
+                <button class="button" type="submit">send message</button>
+            </form>
         </div>
-    </section>
+    </footer>
     </main>
 </body>
 
