--- a/Module-08/index.html
+++ b/Module-08/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="/css/media.css">
     <meta name="vieport" content="width=device-width, initial-scale=1.0">
     <title>Module-08</title>
 </head>
@@ -38,22 +37,22 @@
             <h2 class="title-content">Meet a partner for your best holiday</h2>
             <ul class="items">
                 <li class="item">
-                    <div class="item__img icon-1"><img src="/images/img1.png" alt="image" width="121" height="121"></div>
+                    <div class="item__img icon-1"><img src="images/image1.png" alt="image" width="121" height="121"></div>
                     <p class="team-name">Bradley Hunter</p>
                     <p class="team-descript">Based in Chicago. I love playing tennis and loud music</p>
                 </li>
                 <li class="item ">
-                    <div class="item__img icon-2"><img src="/images/img2.png" alt="image" width="121" height="121"></div>
+                    <div class="item__img icon-2"><img src="images/image2.png" alt="image" width="121" height="121"></div>
                     <p class="team-name">Lucas Marsha</p>
                     <p class="team-descript">I get my inspiration from nature and objects around me. I have a passion to colors, typography and scateboards</p>
                 </li>
                 <li class="item">
-                    <div class="item__img icon-3"><img src="/images/img3.png" alt="image" width="121" height="121"></div>
+                    <div class="item__img icon-3"><img src="images/image3.png" alt="image" width="121" height="121"></div>
                     <p class="team-name">Heather Walker</p>
                     <p class="team-descript">I'm a happy person that loves cats and climbing on mountains</p>
                 </li>
                 <li class="item">
-                    <div class="item__img icon-4"><img src="/images/img4.png" alt="image" width="121" height="121"></div>
+                    <div class="item__img icon-4"><img src="images/image4.png" alt="image" width="121" height="121"></div>
                     <p class="team-name">Bradley Hunter</p>
                     <p class="team-descript">Based in Chicago. I love playing tennis and loud music.</p>
                 </li>
