--- a/Module-08/index.html
+++ b/Module-08/index.html
@@ -57,7 +57,7 @@
                     <p class="team-descript">Based in Chicago. I love playing tennis and loud music.</p>
                 </li>
             </ul>
-            <p class="bottom-title">See other partners</p>
+            <button class="button-2"><a href="#">See other partners</a></button>
         </section>
     </main>
 </body>
