--- a/Module-08/index.html
+++ b/Module-08/index.html
@@ -13,26 +13,25 @@
 
 <body>
     <main>
-        <section class="wrapper">
-            <div class="background-1">
-                <header class="header">
-                    <nav class="navigation">
-                        <ul class="nav-list">
-                            <li><a href="#">Log in</a></li>
-                            <li><a href="#">Sing Up</a></li>
-                        </ul>
-                        <p class="title1">URLAUBSGLÜCK</p>
-                    </nav>
-                    <div class="promo">
-                        <ul class="promo-list">
-                            <li class="title2">Share your holiday dreams</li>
-                            <li class="title3">And find the perfect partner to full fill it</li>
-                            <li class="title4"><a href="#">Find your holiday partner</a></li>
-                        </ul>
-                    </div>
-                </header>
+        <header class="header">
+            <div class="wrapper">
+                <nav class="navigation">
+                    <ul class="nav-list">
+                        <li><a href="#">Log in</a></li>
+                        <li><a href="#">Sing Up</a></li>
+                    </ul>
+                    <p class="title1">URLAUBSGLÜCK</p>
+                </nav>
+                <div class="promo">
+                    <ul class="promo-list">
+                        <li class="title2">Share your holiday dreams</li>
+                        <li class="title3">And find the perfect partner to full fill it</li>
+                        <li class="title4"><a href="#">Find your holiday partner</a></li>
+                    </ul>
+                </div>
             </div>
-        </section>
+        </header>
+
         <section class="partners wrapper">
             <h2 class="title-content">Meet a partner for your best holiday</h2>
             <ul class="items">
