--- a/Module-08/index.html
+++ b/Module-08/index.html
@@ -20,7 +20,9 @@
                         <li><a href="#">Log in</a></li>
                         <li><a href="#">Sing Up</a></li>
                     </ul>
-                    <p class="title1">URLAUBSGLÜCK</p>
+                    <div class="logo"><a href="#">URLAUBSGLÜCK</a></div>
+                    <!-- <a class="title1" href="#">URLAUBSGLÜCK</a> -->
+                    <!-- <p class="title1">URLAUBSGLÜCK</p> -->
                 </nav>
                 <div class="promo">
                     <ul class="promo-list">
