--- a/Module-10/index.html.html
+++ b/Module-10/index.html.html
@@ -138,7 +138,7 @@
                         <picture>
                             <source media="min-width: 1024px" srcset="/images/photo1.png, /images/photo1@2.png 2x">
                             <source srcset="/images/photo1.png, /images/photo1@2.png 2x">
-                            <img src="/images/photo1.png" alt="default" width="380" height="470" />
+                            <img src="images/photo1.png" alt="default" width="380" height="470" />
                         </picture>
                         <p class="name">matthew dix</p>
                         <p class="ucupation">Graphic Design</p>
@@ -179,7 +179,7 @@
                         <picture>
                             <source media="min-width: 1024px" srcset="/images/photo2.png, /images/photo2@2.png 2x">
                             <source srcset="/images/photo2.png, /images/photo2@2.png 2x">
-                            <img src="/images/photo2.png" alt="team2" width="380" height="470" />
+                            <img src="images/photo2.png" alt="team2" width="380" height="470" />
                         </picture>
                         <p class="name">christopher campbell</p>
                         <p class="ucupation">Branding/UX design</p>
@@ -220,7 +220,7 @@
                         <picture>
                             <source media="min-width: 1024px" srcset="/images/photo3.png, /images/photo3@2.png 2x">
                             <source srcset="/images/photo3.png, /images/photo3@2.png 2x">
-                            <img src="/images/photo3.png" alt="team3" width="380" height="470" />
+                            <img src="images/photo3.png" alt="team3" width="380" height="470" />
                         </picture>
                         <p class="name">michael fertig</p>
                         <p class="ucupation">Developer</p>
