--- a/Module-10/index.html.html
+++ b/Module-10/index.html.html
@@ -137,7 +137,7 @@
                     <li class="guys">
                         <picture>
                             <source media="min-width: 1024px" srcset="/images/photo1.png, /images/photo1@2.png 2x">
-                            <source srcset="/images/photo1.png, /images/photo1@2.png 2x">
+                            <source srcset="images/photo1.png, images/photo1@2.png 2x">
                             <img src="images/photo1.png" alt="default" width="380" height="470" />
                         </picture>
                         <p class="name">matthew dix</p>
@@ -178,7 +178,7 @@
                     <li class="guys">
                         <picture>
                             <source media="min-width: 1024px" srcset="/images/photo2.png, /images/photo2@2.png 2x">
-                            <source srcset="/images/photo2.png, /images/photo2@2.png 2x">
+                            <source srcset="images/photo2.png, images/photo2@2.png 2x">
                             <img src="images/photo2.png" alt="team2" width="380" height="470" />
                         </picture>
                         <p class="name">christopher campbell</p>
@@ -219,7 +219,7 @@
                     <li class="guys">
                         <picture>
                             <source media="min-width: 1024px" srcset="/images/photo3.png, /images/photo3@2.png 2x">
-                            <source srcset="/images/photo3.png, /images/photo3@2.png 2x">
+                            <source srcset="images/photo3.png, images/photo3@2.png 2x">
                             <img src="images/photo3.png" alt="team3" width="380" height="470" />
                         </picture>
                         <p class="name">michael fertig</p>
