--- a/Module-11/src/html/team.html
+++ b/Module-11/src/html/team.html
@@ -10,9 +10,9 @@
         <ul class="team__list">
             <li class="guys">
                 <picture>
-                    <source media="(min-width: 1024px)" srcset="/images/photo1.png, /images/photo1@2.png 2x">
-                    <source srcset="images/photo1.png, images/photo1@2.png 2x">
-                    <img src="/images/photo1.png" alt="default" width="380" height="470" />
+                    <source media="(min-width: 1024px)" srcset="./images/photo1.png, ./images/photo1@2.png 2x">
+                    <source srcset="./images/photo1.png, ./images/photo1@2.png 2x">
+                    <img src="./images/photo1.png" alt="default" width="380" height="470" />
                 </picture>
                 <p class="name">matthew dix</p>
                 <p class="ucupation">Graphic Design</p>
@@ -51,9 +51,9 @@
             </li>
             <li class="guys ">
                 <picture>
-                    <source media="(min-width: 1024px) " srcset="/images/photo2.png, /images/photo2@2.png 2x ">
-                    <source srcset="images/photo2.png, images/photo2@2.png 2x ">
-                    <img src="images/photo2.png " alt="team2 " width="380 " height="470 " />
+                    <source media="(min-width: 1024px) " srcset="./images/photo2.png, ./images/photo2@2.png 2x ">
+                    <source srcset="./images/photo2.png, ./images/photo2@2.png 2x ">
+                    <img src="./images/photo2.png " alt="team2 " width="380 " height="470 " />
                 </picture>
                 <p class="name ">christopher campbell</p>
                 <p class="ucupation ">Branding/UX design</p>
@@ -81,7 +81,7 @@
                                 </a>
                         </li>
                         <li>
-                            <a href="# " class="instagram "><svg class="svg__hover ">
+                            <a href="#" class="instagram "><svg class="svg__hover ">
                                 <use href="./images/sprite.svg#icon-instagram-s">
                                 </use>
                                 </svg>
@@ -92,9 +92,9 @@
             </li>
             <li class="guys ">
                 <picture>
-                    <source media="(min-width: 1024px)" srcset="/images/photo3.png, /images/photo3@2.png 2x ">
-                    <source srcset="images/photo3.png, images/photo3@2.png 2x ">
-                    <img src="images/photo3.png " alt="team3 " width="380 " height="470 " />
+                    <source media="(min-width: 1024px)" srcset="./images/photo3.png, ./images/photo3@2.png 2x ">
+                    <source srcset="./images/photo3.png, ./images/photo3@2.png 2x ">
+                    <img src="./images/photo3.png " alt="team3 " width="380 " height="470 " />
                 </picture>
                 <p class="name ">michael fertig</p>
                 <p class="ucupation ">Developer</p>
